// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiSelectTag field > Tags should display readOnly tags list 1`] = `
<div
  className="tags"
>
  <Badge
    label="toto"
    tcStyle="solid"
  />
  <Badge
    label="lol"
    tcStyle="solid"
  />
  <Badge
    label="tata"
    tcStyle="solid"
  />
</div>
`;

exports[`MultiSelectTag field > Tags should display tags list 1`] = `
<div
  className="tags"
>
  <Badge
    label="toto"
    onDelete={[Function]}
    tcStyle="solid"
  />
  <Badge
    label="lol"
    onDelete={[Function]}
    tcStyle="solid"
  />
  <Badge
    label="tata"
    onDelete={[Function]}
    tcStyle="solid"
  />
</div>
`;
